# OpcUaConsoleClient

./: CMakeLists.txt  main.cpp
open62541/: CMakeLists.txt
